# ai-test

./: .gitignore  LICENSE  README.md  eslint.config.js  package.json  pnpm-lock.yaml  vitest.config.ts
services/media-gen/: app.py  pyproject.toml
services/media-gen/src/: __init__.py
services/media-gen/src/application/: __init__.py
services/media-gen/src/application/dto/: __init__.py  generation_dto.py
services/media-gen/src/application/use_cases/: __init__.py  generate_image_use_case.py
services/media-gen/src/core/: settings.py
services/media-gen/src/domain/: __init__.py  errors.py
services/media-gen/src/domain/entities/: __init__.py  generated_image.py
services/media-gen/src/domain/ports/: __init__.py  image_encoder_port.py
services/media-gen/src/domain/repositories/: __init__.py  model_cache_repository.py
services/media-gen/src/domain/value_objects/: __init__.py  generation_params.py
services/media-gen/src/infrastructure/: __init__.py
services/media-gen/src/infrastructure/adapters/: __init__.py  image_encoder_adapter.py  stable_diffusion_adapter.py
services/media-gen/src/infrastructure/config/: __init__.py  device_selector.py  huggingface_config.py
services/media-gen/src/presentation/: __init__.py  dependencies.py
services/media-gen/src/presentation/routes/: __init__.py  health_routes.py  (+1 more)
services/rag/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
services/rag/src/: __init__.py  config.py  main.py  schemas.py
services/rag/src/api/: __init__.py  chat.py  documents.py
services/rag/src/application/: __init__.py  dependencies.py  document_service.py  rag_chain_service.py
services/rag/src/core/: embedding.py  llm_gateway.py  vector_store.py
services/rag/src/document_loader/: loader.py
services/rag/src/domain/: __init__.py
services/rag/src/infrastructure/: __init__.py
services/rag/src/persistence/: cache_manager.py  document_metadata.py  session_store.py
services/rag/src/services/: ingestion.py  rag_chain.py
services/rag/tests/: conftest.py  test_rag_api.py
(+222 files in other folders)
