[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "media-gen"
version = "0.1.0"
description = "Text-to-Image generation service using Stable Diffusion"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "torch>=2.0.0",
    "diffusers>=0.30.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/example/ai-test"
Documentation = "https://github.com/example/ai-test#readme"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
