[project]
name = "rag-service"
version = "0.1.0"
description = "Production-grade RAG service with Qdrant vector store"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.12",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.5.0",
    "pypdf>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2020.1.16",
    "markdown>=3.4.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
